--- a/learning_logs/templates/learning_logs/index.html
+++ b/learning_logs/templates/learning_logs/index.html
@@ -6,7 +6,17 @@
 
   	<p class="lead">Make your own Learning Log, and keep a list of the topics you're learning about. Whenever you learn something new about a topic, make an entry summarizing what you've learned.</p>
 
-  	<a class="btn btn-lg btn-primary" href="{% url 'users:register' %}"
-  	  role="button">Register &raquo;</a>
+  	{% if user.is_authenticated %}
+      <a class="btn btn-lg btn-primary" href="{% url 'learning_logs:topics' %}"
+        role="button">Your topics &raquo;</a>
+      <a class="btn btn-lg btn-primary" href="{% url 'users:logout' %}"
+        role="button">Log out &raquo;</a>
+    {% else %}
+      <a class="btn btn-lg btn-primary" href="{% url 'users:register' %}"
+        role="button">Register &raquo;</a>
+      <a class="btn btn-lg btn-primary" href="{% url 'users:login' %}"
+        role="button">Log in &raquo;</a>
+    {% endif %}
+
   </div>
 {% endblock page_header %}
