--- a/learning_logs/templates/learning_logs/topic.html
+++ b/learning_logs/templates/learning_logs/topic.html
@@ -2,6 +2,9 @@
 
 {% block page_header %}
   <h3>{{ topic }}</h3>
+  <p align="right">
+  <a href="{% url 'learning_logs:delete_topic' topic.id %}">Delete this topic</a>
+  </p>
 {% endblock page_header %}
 
 {% block content %}
@@ -13,7 +16,10 @@
 	  <h4 class="card-header">
 	  	{{ entry.date_added|date:'M d, Y H:i' }}
 	  	<small><a href="{% url 'learning_logs:edit_entry' entry.id %}">
-	  	  edit entry</a></small>
+	  	  Edit entry</a></small>
+	  	<small>
+	  		<a href="{% url 'learning_logs:delete_entry' entry.id %}">Delete entry</a>
+	  	</small>
 	  </h4>
 	  <div class="card-body">
 	  	{{ entry.text|linebreaks }}
