--- a/learning_logs/templates/learning_logs/base.html
+++ b/learning_logs/templates/learning_logs/base.html
@@ -27,7 +27,12 @@
   	  	<ul class="navbar-nav mr-auto">
   	  	  <li class="nav-item">
   	  	  	<a class="nav-link" href="{% url 'learning_logs:topics' %}">
-  	  	  	  Topics</a></li>
+  	  	  	  Topics</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="{% url 'learning_logs:public_topics' %}">
+              Public topics</a>
+          </li>
   	  	</ul>
   	  	<ul class="navbar-nav ml-auto">
   	  	  {% if user.is_authenticated %}
